dnl Process this file with autoconf to produce a configure script.
AC_INIT(tqslcert.cpp)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_RANLIB

AC_MINGW32

AC_ARG_WITH(openssl,
  [  --with-openssl=DIR      location of OPENSSL files],
  [ OPENSSL="$withval" ],
  [ OPENSSL="../../openssl" ]
)
AC_SUBST(OPENSSL)

AC_ARG_WITH(tqsllib,
  [  --with-tqsllib=DIR      location of tQSL library],
  [ TQSLLIB="$withval" ],
  [ TQSLLIB="../tqsllib" ]
)
AC_SUBST(TQSLLIB)

export LIBRARY_PATH="$OPENSSL/lib:$TQSLLIB"

dnl Checks for libraries.
dnl Replace `main' with a function in -lcrypto:
AC_CHECK_LIB(crypto, MD5_Init)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir strerror)

AC_OUTPUT(Makefile Makefile.g95)
